stable/task/evidence-summarize/2.0.0/README.md
# (DEPRECATED) evidence-summarize v2.0.0

Summarizes evidences under the given paths.

### Report a Bug / Request a Feature

If you experience issues, please report them on the following slack channels:
```
#devops-compliance
#common-tekton-tasks
#cd-tekton-users-shared
```

### Inputs

#### Parameters

 - **evidence-repo-path**: path to the evidence repo
 - **path-list**: list of paths under which the evidences can be found (separated by new line)
 - **toolchain-crn**: the crn of the toolchain
 - **git-api-token-key** (`git-token`) github enterprise api token secret name
 - **evidence-repo-url** url to the evidence git repository
 - **pipeline-debug**: (Default: `0`) pipeline-debug mode

#### Implicit

The following params comes from tekton annotations:

 - **PIPELINE_RUN_ID**: unique id of the pipeline run

#### Workspaces

 - **evidence-locker**: workspace to which contains the evidence locker repository
 - **secrets**: workspace to get the secret from

### Outputs

#### Results

 - **summary-path**: The path of the created evidence summary
 - **failure-count**: Number of failures in evidence

### Usage

The evidence locker in the workspace should be already cloned before this task.

Example usage in a pipeline:

```yaml
- name: evidence-summarize-task
  taskRef:
    name: evidence-summarize
  workspaces:
    - name: evidence-locker
      workspace: evidence-locker
    - name: secrets
      workspace: secrets
  params:
    - name: evidence-repo-path
      value: "evidence-locker-repo"
    - name: path-list
      value: |
        ci/pipeline-run-id-1
        cd/pipeline-run-id-2
    - name: toolchain-crn
      value: "crn:v1:bluemix:public:toolchain:us-south:a/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa:bbbbbbbb-cccc-dddd-eeee-ffffffffffff::"
    - name: evidence-repo-url
      value: $(params.evidence-repo-url)
    - name: pipeline-debug
      value: $(params.pipeline-debug)
```
